--- a/mikrotik-service/package.json
+++ b/mikrotik-service/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.39.0",
+        "@types/radius": "^0.0.33",
         "bullmq": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "ioredis": "^5.3.2",
         "node-routeros": "^1.6.9",
+        "radius": "^1.1.4",
         "telnet-client": "^2.2.9",
         "uuid": "^9.0.1",
         "winston": "^3.11.0"
