--- a/noloji-isp-os/package.json
+++ b/noloji-isp-os/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.544.0",
     "maplibre-gl": "^5.7.1",
     "next": "^15.5.3",
+    "nextjs-toploader": "^3.9.17",
     "react": "^19.1.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.0",
